feat: Add comprehensive monitoring, security improvements
- Add monitoring module with Log Analytics, Application Insights, and alerting
- Add log-analytics module for centralized logging
- Implement container insights and diagnostic settings for all resources
- Add monitoring dashboard and alert rules for key metrics
- Security improvements:
  - Fix hardcoded subscription ID in RBAC scripts (now uses dynamic lookup)
  - Add environment-specific comments for backend configuration
  - Ensure all sensitive outputs are properly marked
- Update GitHub Actions workflow for monitoring resources and unique naming
- Add generate-unique-names.sh script for local deployments
- Update documentation with monitoring setup and security best practices

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -79,6 +79,10 @@ jobs:
           sed -i "s/demoacr1234567890/demoacr${UNIQUE_SUFFIX}/g" terraform.tfvars
           sed -i "s/demokv1234567890/demokv${UNIQUE_SUFFIX}/g" terraform.tfvars
           
+          # Update monitoring resource names for uniqueness (optional but recommended)
+          sed -i "s/log_analytics_workspace_name = \"aks-demo-logs\"/log_analytics_workspace_name = \"aks-demo-logs-${UNIQUE_SUFFIX}\"/g" terraform.tfvars
+          sed -i "s/application_insights_name = \"aks-demo-insights\"/application_insights_name = \"aks-demo-insights-${UNIQUE_SUFFIX}\"/g" terraform.tfvars
+          
           echo "Generated unique resource names with suffix: ${UNIQUE_SUFFIX}"
         fi
 
